@@ -1,6 +1,7 @@
 package guru.springframework.spring6restmvc.controller;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.TransactionSystemException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -8,9 +9,7 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-
-
+import java.util.stream.Collectors;
 
 /**
  * Created by jt, Spring Framework Guru.
@@ -18,15 +17,21 @@ import java.util.Map;
 @ControllerAdvice
 public class CustomErrorController {
 
+    @ExceptionHandler
+    ResponseEntity handleJPAViolations(TransactionSystemException exception){
+        return ResponseEntity.badRequest().build();
+    }
+
     @ExceptionHandler(MethodArgumentNotValidException.class)
     ResponseEntity handleBindErrors(MethodArgumentNotValidException exception){
-        List errorList = exception.getFieldErrors()
-                .stream()
-                .map(fieldError ->  {
-                            Map<String,String> errorMap = new HashMap<>();
-                            errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
-                            return errorMap;
-                        }).toList();
+
+        List errorList = exception.getFieldErrors().stream()
+                .map(fieldError -> {
+                    Map<String, String > errorMap = new HashMap<>();
+                    errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
+                    return errorMap;
+                }).collect(Collectors.toList());
+
         return ResponseEntity.badRequest().body(errorList);
     }
 }
